--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
                 <version>2.1.2</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>com.tractionsoftware</groupId>
+                <artifactId>gwt-traction</artifactId>
+                <version>1.6.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
