--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
+                <groupId>com.vaadin.polymer</groupId>
+                <artifactId>vaadin-gwt-polymer-elements</artifactId>
+                <version>1.2.3.0</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.tractionsoftware</groupId>
                 <artifactId>gwt-traction</artifactId>
                 <version>1.6.0</version>
