--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,16 @@
 
     <parent>
         <groupId>org.ctoolkit.maven</groupId>
-        <artifactId>ctoolkit-parent</artifactId>
-        <version>5</version>
+        <artifactId>ctoolkit-public</artifactId>
+        <version>1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>gwt-bom</artifactId>
-    <version>2.7.0-SNAPSHOT</version>
+    <version>2.8.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>GWT Bill of Materials</name>
-    <description>The GWT Bill of Materials to be used in CToolkiT libraries.</description>
+    <description>The GWT Bill of Materials to be used in CtoolkiT libraries.</description>
     <url>https://github.com/turnonline/gwt-bom</url>
 
     <scm>
@@ -64,54 +64,54 @@
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-elemental</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-codeserver</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-servlet</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-user</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-dev</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory-apt</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory-client</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory-server</artifactId>
-                <version>2.7.0</version>
+                <version>2.8.0</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt.inject</groupId>
@@ -122,7 +122,7 @@
             <dependency>
                 <groupId>com.vaadin.polymer</groupId>
                 <artifactId>vaadin-gwt-polymer-elements</artifactId>
-                <version>1.2.3.0</version>
+                <version>1.7.0.0</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
