--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
                 <version>2.8.0</version>
             </dependency>
             <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava-gwt</artifactId>
+                <version>21.0</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
                 <groupId>com.google.gwt.inject</groupId>
                 <artifactId>gin</artifactId>
                 <version>2.1.2</version>
