dagger-gwt dependency has been added.

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
+                <groupId>com.google.dagger</groupId>
+                <artifactId>dagger-gwt</artifactId>
+                <version>2.9</version>
+            </dependency>
+            <dependency>
                 <groupId>com.vaadin.polymer</groupId>
                 <artifactId>vaadin-gwt-polymer-elements</artifactId>
                 <version>1.7.0.0</version>
