--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <version>2.8.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>GWT Bill of Materials</name>
-    <description>The GWT Bill of Materials to be used in CtoolkiT libraries.</description>
+    <description>The Bill of Materials to be used in GWT based widgets.</description>
     <url>https://github.com/turnonline/gwt-bom</url>
 
     <scm>
@@ -120,6 +120,11 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
+                <groupId>javax.inject</groupId>
+                <artifactId>javax.inject</artifactId>
+                <version>1</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.gwt.inject</groupId>
                 <artifactId>gin</artifactId>
                 <version>2.1.2</version>
@@ -129,6 +134,7 @@
                 <groupId>com.google.dagger</groupId>
                 <artifactId>dagger-gwt</artifactId>
                 <version>2.9</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.dagger</groupId>
@@ -155,6 +161,7 @@
                 <groupId>com.tractionsoftware</groupId>
                 <artifactId>gwt-traction</artifactId>
                 <version>1.6.0</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
