--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.ctoolkit.maven</groupId>
@@ -26,7 +25,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>gwt-bom</artifactId>
-    <version>2.8.0-SNAPSHOT</version>
+    <version>2.8.0</version>
     <packaging>pom</packaging>
     <name>GWT Bill of Materials</name>
     <description>The Bill of Materials to be used in GWT based widgets.</description>
@@ -36,7 +35,7 @@
         <connection>scm:git:[fetch=]git@github.com:turnonline/gwt-bom.git</connection>
         <developerConnection>scm:git:[push=]git@github.com:turnonline/gwt-bom.git</developerConnection>
         <url>https://github.com/turnonline/gwt-bom</url>
-        <tag>HEAD</tag>
+        <tag>gwt-bom-2.8.0</tag>
     </scm>
 
     <issueManagement>
