--- a/pom.xml
+++ b/pom.xml
@@ -130,9 +130,9 @@
                 <version>1</version>
             </dependency>
             <dependency>
-                <groupId>com.google.gwt.inject</groupId>
-                <artifactId>gin</artifactId>
-                <version>2.1.2</version>
+                <groupId>org.fusesource.restygwt</groupId>
+                <artifactId>restygwt</artifactId>
+                <version>2.2.1</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
