--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.ctoolkit.maven</groupId>
         <artifactId>ctoolkit-public</artifactId>
-        <version>1</version>
+        <version>2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -69,59 +69,59 @@
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-elemental</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-codeserver</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-servlet</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-user</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-dev</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory-apt</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory-client</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.web.bindery</groupId>
                 <artifactId>requestfactory-server</artifactId>
-                <version>2.8.1</version>
+                <version>2.8.2</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava-gwt</artifactId>
-                <version>21.0</version>
+                <version>27.1-jre</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
@@ -132,29 +132,29 @@
             <dependency>
                 <groupId>org.fusesource.restygwt</groupId>
                 <artifactId>restygwt</artifactId>
-                <version>2.2.2</version>
+                <version>2.2.4</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.dagger</groupId>
                 <artifactId>dagger-gwt</artifactId>
-                <version>2.14.1</version>
+                <version>2.22.1</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.dagger</groupId>
                 <artifactId>dagger-compiler</artifactId>
-                <version>2.14.1</version>
+                <version>2.22.1</version>
             </dependency>
             <dependency>
                 <groupId>com.google.dagger</groupId>
                 <artifactId>dagger-producers</artifactId>
-                <version>2.14.1</version>
+                <version>2.22.1</version>
             </dependency>
             <dependency>
                 <groupId>com.google.auto.factory</groupId>
                 <artifactId>auto-factory</artifactId>
-                <version>1.0-beta5</version>
+                <version>1.0-beta6</version>
             </dependency>
             <dependency>
                 <groupId>com.vaadin.polymer</groupId>
