--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>gwt-bom</artifactId>
-    <version>2.9.0</version>
+    <version>2.9.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>GWT Bill of Materials</name>
     <description>The Bill of Materials to be used in GWT based widgets.</description>
@@ -35,7 +35,7 @@
         <connection>scm:git:[fetch=]git@github.com:turnonline/gwt-bom.git</connection>
         <developerConnection>scm:git:[push=]git@github.com:turnonline/gwt-bom.git</developerConnection>
         <url>https://github.com/turnonline/gwt-bom</url>
-        <tag>gwt-bom-2.9.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
